# rules_javascript

./: AUTHORS  BUILD.bazel  README.asciidoc  WORKSPACE
javascript/: BUILD  javascript.bzl  repositories.bzl
javascript/constraints/: BUILD
javascript/internal/: BUILD  js_binary.tmpl.js  providers.bzl  toolchain.bzl  util.bzl
javascript/node/: BUILD  node.bzl
javascript/toolchains/: BUILD
tests/: BUILD  unittest.js
tests/integration/: BUILD  integration_test.js  util.bzl
tests/integration/TestCommonjsPackage/workspace/: BUILD.skel.bazel  WORKSPACE  main.js
tests/integration/TestCommonjsPackage/workspace/lib/: BUILD.skel.bazel  hello.js
tests/integration/TestModuleLibrary/workspace/: BUILD.skel.bazel  hello_impl.js  main.js
tests/integration/TestModuleLibrary/workspace/lib/: hello.js
tests/integration/TestModuleLibraryDiamond/workspace/: BUILD.skel.bazel  main.js  upper.js
tests/integration/TestModuleLibraryDiamond/workspace/lower-a/: BUILD.skel.bazel  lower.js
tests/integration/TestModuleLibraryDiamond/workspace/lower-b/: BUILD.skel.bazel  lower.js
tests/integration/TestModuleLibraryDiamond/workspace/middle-a/: BUILD.skel.bazel  middle.js
tests/integration/TestModuleLibraryDiamond/workspace/middle-b/: BUILD.skel.bazel  middle.js
tools/babel/: BUILD  babel.bzl
tools/eslint/: BUILD  eslint.bzl
tools/webpack/: BUILD  webpack.bzl
tools/yarn/: BUILD  yarn.bzl
typescript/: BUILD  typescript.bzl
typescript/internal/: BUILD  toolchain.bzl  tsc_wrapper.js  typescript.BUILD
typescript/toolchains/: BUILD
yarn/: BUILD  yarn.bzl
yarn/internal/: BUILD  lockfile_parser.bzl  (+4 more)
(+77 files in other folders)
