load("@rules_javascript//javascript:javascript.bzl", "js_binary", "js_library")

js_binary(
    name = "hello",
    src = "main.js",
    format = "commonjs",
    main = "main",
    deps = ["//lib:hello_lib"],
)

genrule(
    name = "hello_genrule",
    outs = ["hello_out.txt"],
    cmd = "$(location :hello) > $@",
    tools = [":hello"],
)
