load("@rules_javascript//javascript:javascript.bzl", "js_binary", "js_library")

js_library(
    name = "upper",
    srcs = ["upper.js"],
    format = "module",
    deps = [
        "//middle-a:middle",
        "//middle-b:middle",
    ],
)

js_binary(
    name = "hello",
    src = "main.js",
    format = "module",
    main = "main",
    deps = ["//:upper"],
)

genrule(
    name = "hello_genrule",
    outs = ["hello_out.txt"],
    cmd = "$(location :hello) > $@",
    tools = [":hello"],
)
